[gd_scene load_steps=8 format=2]

[ext_resource path="res://Parallax/PixelART/wallhaven-g8pejd.jpg" type="Texture" id=1]
[ext_resource path="res://Fonte/Galaxia/SF Distant Galaxy Alternate.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Audios Jogo/Star Wars Music Theme.mp3" type="AudioStream" id=3]
[ext_resource path="res://Cenas/Menu.gd" type="Script" id=4]
[ext_resource path="res://Fonte/Galaxia/SF Distant Galaxy.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 5 )

[node name="Menu" type="Node"]
script = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = 26.0
margin_top = 426.0
margin_right = 299.0
margin_bottom = 515.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "JOGAR"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 501, 358 )
scale = Vector2( 0.759896, 0.759167 )
texture = ExtResource( 1 )

[node name="AudioTema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="TimerEsperaTocar" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PADAWAN" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.0
margin_top = 64.0
margin_right = 180.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 2 )
text = "P A D A W A N"
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="TimerEsperaTocar" to="." method="_on_TimerEsperaTocar_timeout"]
